crates/libsolv_rs/src/snapshots/libsolv_rs__solver__test__unsat_after_backtracking.snap
---
source: crates/libsolv_rs/src/solver.rs
expression: error
---
The following packages are incompatible
|-- B can be installed with any of the following options:
    |-- B 4.5.6 | 4.5.7 would require
        |-- D 1.*, which can be installed with any of the following options:
            |-- D 1.0.0
|-- C cannot be installed because there are no viable options:
    |-- C 1.0.0 | 1.0.1 would require
        |-- D 2.*, which cannot be installed because there are no viable options:
            |-- D 2.0.0, which conflicts with the versions reported above.

