crates/libsolv_rs/src/snapshots/libsolv_rs__solver__test__unsat_applies_graph_compression.snap
---
source: crates/libsolv_rs/src/solver.rs
expression: error
---
The following packages are incompatible
|-- A can be installed with any of the following options:
    |-- A 9 | 10 would require
        |-- B, which can be installed with any of the following options:
            |-- B 42 | 100 would require
                |-- C <100, which can be installed with any of the following options:
                    |-- C 99
|-- C >100 cannot be installed because there are no viable options:
    |-- C 101 | 103, which conflicts with the versions reported above.

