crates/libsolv_rs/src/snapshots/libsolv_rs__solver__test__unsat_bluesky_conflict.snap
---
source: crates/libsolv_rs/src/solver.rs
expression: error
---
The following packages are incompatible
|-- bluesky-widgets <100 can be installed with any of the following options:
    |-- bluesky-widgets 42 would require
        |-- suitcase-utils <54, which can be installed with any of the following options:
            |-- suitcase-utils 53
|-- suitcase-utils >=54,<100 cannot be installed because there are no viable options:
    |-- suitcase-utils 54, which conflicts with the versions reported above.

