crates/libsolv_rs/src/snapshots/libsolv_rs__solver__test__unsat_incompatible_root_requirements.snap
---
source: crates/libsolv_rs/src/solver.rs
expression: error
---
The following packages are incompatible
|-- A >=5,<10 can be installed with any of the following options:
    |-- A 5
|-- A <4 cannot be installed because there are no viable options:
    |-- A 2, which conflicts with the versions reported above.

