crates/libsolv_rs/src/snapshots/libsolv_rs__solver__test__unsat_missing_top_level_dep_1.snap
---
source: crates/libsolv_rs/src/solver.rs
expression: error
---
The following packages are incompatible
|-- No candidates where found for fghj.

