crates/libsolv_rs/src/snapshots/libsolv_rs__solver__test__unsat_no_candidates_for_child_1.snap
---
source: crates/libsolv_rs/src/solver.rs
expression: error
---
The following packages are incompatible
|-- asdf cannot be installed because there are no viable options:
    |-- asdf 1.2.3 would require
        |-- C >1, for which no candidates where found.

