crates/libsolv_rs/src/snapshots/libsolv_rs__solver__test__unsat_no_candidates_for_child_2.snap
---
source: crates/libsolv_rs/src/solver.rs
expression: error
---
The following packages are incompatible
|-- A <1000 cannot be installed because there are no viable options:
    |-- A 41 would require
        |-- B <20, for which no candidates where found.

