crates/libsolv_rs/src/snapshots/libsolv_rs__solver__test__unsat_pubgrub_article.snap
---
source: crates/libsolv_rs/src/solver.rs
expression: error
---
The following packages are incompatible
|-- menu can be installed with any of the following options:
    |-- menu 1.0.0 would require
        |-- dropdown >=1.8.0,<2.0.0, which can be installed with any of the following options:
            |-- dropdown 1.8.0 would require
                |-- intl 3.0.0.*, which can be installed with any of the following options:
                    |-- intl 3.0.0
|-- icons 1.0.0.* can be installed with any of the following options:
    |-- icons 1.0.0
|-- intl 5.0.0.* cannot be installed because there are no viable options:
    |-- intl 5.0.0, which conflicts with the versions reported above.

